--- a/frontend/src/components/LoginFormPage/LoginForm.css
+++ b/frontend/src/components/LoginFormPage/LoginForm.css
@@ -1,6 +1,6 @@
 form {
     border: 1px solid grey;
-    /* height: 30vh; */
+    border-radius: .5rem;
     padding: 20px 0px;
     width: 30vw;
     margin: 0 auto;
@@ -32,7 +32,7 @@ input {
     width: 20vw;
 }
 
-button {
+form>button {
     margin-top: 20px;
     padding: 10px 20px;
     border: none;
@@ -55,7 +55,7 @@ button {
     bottom: calc(25% - 1px);
 }
 
-button:hover {
+form>button:hover {
     background-color: #cd4061;
 }
 
