--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,6 +1,51 @@
+.nav-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-height: 35.5px;
+    padding-bottom: 10px;
+    margin-top: 12px;
+    border-bottom: 1px solid grey;
+}
+
+.nav-container>span {
+    font-size: 22px;
+    cursor: pointer;
+}
+
 .NavBar {
     display: flex;
     align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 15px;
+}
+
+.NavBar a {
+    text-decoration: none;
+    color: lightgray;
+}
+
+.NavBar>a:hover,
+.logout-link:hover {
+    color: lightblue;
+    cursor: pointer;
+}
+
+.NavBar>.signup-button {
+    background-color: #1C656E;
+    padding: 10px 15px;
+    border: none;
+    border-radius: .5rem;
+}
+
+.NavBar>.signup-button:hover {
+    background-color: rgb(24, 115, 128);
+    cursor: pointer;
+}
+
+.NavBar>.signup-button>a {
+    color: white;
 }
 
 .NavBar>button {
@@ -10,4 +55,34 @@
 #profile-pic {
     height: 50px;
     width: 50px;
+}
+
+.profile-button {
+    background: none;
+    border: none;
+    font-size: 35px;
+    padding: 0;
+}
+
+.profile-button:hover {
+    cursor: pointer;
+}
+
+.profile-dropdown {
+    position: absolute;
+    list-style-type: none;
+    padding-left: 10px;
+    border: 1px solid grey;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 150px;
+    right: 15px;
+    top: 70px
+}
+
+.hidden {
+    display: none;
 }
