--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -26,7 +26,21 @@
     color: lightgray;
 }
 
+.login-button {
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    border: none;
+    overflow: hidden;
+    outline: none;
+    padding: 0;
+    color: lightgray;
+}
+
+
 .NavBar>a:hover,
+.NavBar>.login-button:hover,
 .logout-link:hover {
     color: lightblue;
     cursor: pointer;
