--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,4 +1,5 @@
 form {
+    background-color: #141414;
     border: 1px solid grey;
     border-radius: .5rem;
     padding: 20px 0px;
@@ -16,6 +17,7 @@ form>h1 {
 }
 
 form>label {
+    font-weight: 500;
     text-align: left;
     display: flex;
     flex-direction: column;
@@ -23,18 +25,21 @@ form>label {
 }
 
 input {
+    font-size: medium;
     padding-inline-start: 20px;
     border-radius: .5rem;
     border: 1px solid grey;
-    background-color: #141414;
+    background-color: #080808;
     height: 24px;
     width: 20vw;
     margin-top: 2px;
 }
 
 form>button {
+    font-size: large;
+    font-weight: bold;
     margin-top: 20px;
-    padding: 10px 20px;
+    padding: 10px 50px;
     border: none;
     background-color: #CD3761;
     border-radius: .5rem;
@@ -47,11 +52,12 @@ form>button {
 .password-container>i {
     position: absolute;
     right: 25px;
-    bottom: calc(25% - 1px);
+    bottom: calc(25% - 2px);
 }
 
 form>button:hover {
     background-color: #cd4061;
+    cursor: pointer;
 }
 
 .login-error-container {
@@ -64,4 +70,18 @@ form>button:hover {
     margin-top: 0;
 
     color: rgb(244, 48, 48);
+}
+
+@media (prefers-color-scheme: light) {
+    form {
+        background-color: white;
+    }
+
+    input {
+        background-color: #ffffff;
+    }
+
+    form>button {
+        color: white;
+    }
 }
