--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -5,7 +5,6 @@
     max-height: 35.5px;
     padding-bottom: 10px;
     margin-top: 12px;
-    border-bottom: 1px solid grey;
 }
 
 .nav-container>span {
@@ -24,11 +23,13 @@
 .NavBar a {
     text-decoration: none;
     color: lightgray;
+    font-weight: 600;
 }
 
 .login-button {
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 600;
     background-color: transparent;
     background-repeat: no-repeat;
     border: none;
@@ -42,24 +43,22 @@
 .NavBar>a:hover,
 .NavBar>.login-button:hover,
 .logout-link:hover {
-    color: lightblue;
+    color: #78e5f3;
     cursor: pointer;
 }
 
 .NavBar>.signup-button {
     background-color: #1C656E;
+    font-weight: 600;
+    font-size: 14px;
     padding: 10px 15px;
     border: none;
     border-radius: .5rem;
 }
 
 .NavBar>.signup-button:hover {
-    background-color: rgb(24, 115, 128);
+    background-color: rgb(37, 134, 149);
     cursor: pointer;
-}
-
-.NavBar>.signup-button>a {
-    color: white;
 }
 
 .NavBar>button {
@@ -99,4 +98,22 @@
 
 .hidden {
     display: none;
+}
+
+@media (prefers-color-scheme: light) {
+
+    .NavBar>a,
+    .login-button {
+        color: black;
+    }
+
+    .NavBar>a:hover,
+    .NavBar>.login-button:hover,
+    .logout-link:hover {
+        color: #1e7f8c;
+    }
+
+    .signup-button {
+        color: white;
+    }
 }
