--- a/frontend/src/context/Modal.css
+++ b/frontend/src/context/Modal.css
@@ -21,3 +21,9 @@
 #modal-content {
     position: absolute;
 }
+
+@media (prefers-color-scheme: light) {
+    #modal-background {
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+}
