--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 :root {
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    background-color: #1F1F1F;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
     font-synthesis: none;
@@ -19,7 +19,7 @@ body {
 
 @media (prefers-color-scheme: light) {
     :root {
-        color: #213547;
+        color: black;
         background-color: #ffffff;
     }
 }
