--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,4 +1,5 @@
 .nav-container {
+    border-bottom: 1px solid lightgray;
     display: flex;
     align-items: center;
     justify-content: space-between;
