added demo user login, made logout navigate to home page, join glg button dissapears when logged in

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -72,6 +72,13 @@ form>button:hover {
     color: rgb(244, 48, 48);
 }
 
+#demo-user-login {
+    color: teal;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+    cursor: pointer;
+}
+
 @media (prefers-color-scheme: light) {
     form {
         background-color: white;
