--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -91,7 +91,10 @@
     list-style-type: none;
     padding-left: 10px;
     border: 1px solid grey;
-    height: 150px;
+    /* height: 150px; */
+    gap: 10px;
+    padding: 8px 0;
+    padding-left: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
