created EventList and GroupForm components. Fixed a few ? checks throughout other components, added extra styling

--- a/frontend/src/components/EventDetailPage/EventDetails.css
+++ b/frontend/src/components/EventDetailPage/EventDetails.css
@@ -72,6 +72,10 @@
     gap: 10px;
 }
 
+#manage-event-buttons>* {
+    cursor: pointer;
+}
+
 #event-header>div img {
     height: 90px;
     aspect-ratio: 1/.6;
