created DeleteGroupModal component (no functionality yet) and revamped some light scheme colors

--- a/frontend/src/components/GroupForm/GroupForm.css
+++ b/frontend/src/components/GroupForm/GroupForm.css
@@ -47,3 +47,13 @@
 .errors {
     font-size: 14px;
 }
+
+@media (prefers-color-scheme: light) {
+    .form-container textarea {
+        background-color: #ffffff;
+    }
+
+    .group-button {
+        color: white;
+    }
+}
