fixed description overflow issue

--- a/frontend/src/components/EventDetailPage/EventDetails.css
+++ b/frontend/src/components/EventDetailPage/EventDetails.css
@@ -85,6 +85,11 @@
     aspect-ratio: 1/.6;
 }
 
+#event-details article {
+    width: clamp(600px, 1000px, 90vw);
+    overflow-wrap: break-word;
+}
+
 @media (prefers-color-scheme: light) {
 
     .mini-group-card,
