added more seeders for events, going to edit to be in past in production. Added padding to event management buttons. Fixed endDate rendering

--- a/frontend/src/components/EventDetailPage/EventDetails.css
+++ b/frontend/src/components/EventDetailPage/EventDetails.css
@@ -76,8 +76,17 @@
     gap: 10px;
 }
 
-#manage-event-buttons>* {
+#manage-event-buttons>button {
     cursor: pointer;
+    padding: 8px 12px;
+    border: none;
+    border-radius: .5rem;
+    background-color: gray;
+
+}
+
+#manage-event-buttons>button:hover {
+    background-color: rgb(109, 108, 108);
 }
 
 #event-header>div img {
@@ -103,10 +112,6 @@
 
     #manage-event-buttons button {
         color: white;
-        background-color: gray;
-        border: none;
-        border-radius: .5rem;
-        padding: 5px 10px;
     }
 
     #manage-event-buttons button:hover {
