--- a/frontend/src/components/GroupsListPage/GroupListPage.css
+++ b/frontend/src/components/GroupsListPage/GroupListPage.css
@@ -35,8 +35,9 @@
 
 .card-content>h2+p+p {
     font-size: 15px;
-    width: clamp(400px, 800px, 50vw);
+    width: calc(clamp(400px, 800px, 50vw) - 20px);
     overflow-wrap: break-word;
+    padding-right: 20px;
 }
 
 .card>img+div>h2+p+p {
