FIX: Fixed issue where deleting a group did not delete linked events from redux state requiring a refresh for accurate event info

--- a/frontend/src/components/LoginFormModal/LoginForm.css
+++ b/frontend/src/components/LoginFormModal/LoginForm.css
@@ -1,3 +1,4 @@
+/* TODO fix ultrawide screen rendering of inputs on all modals */
 .login-signup-form {
     background-color: #141414;
     border: 1px solid grey;
